[gd_scene load_steps=6 format=2]

[ext_resource path="res://ldj45/Pickups/BasePickup.gd" type="Script" id=1]
[ext_resource path="res://2dhandpainted_interiortileset/Assets/bag.tres" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://ldj45/ui/fonts/Dimbo Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="Pickup" type="Area2D"]
script = ExtResource( 1 )
texture = ExtResource( 2 )
description = "A bag of seeds"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TextField" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -247.0
margin_right = 167.0
margin_bottom = -88.0
custom_fonts/normal_font = SubResource( 3 )
text = "A bag of seeds"
scroll_active = false
[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pickup_body_exited"]
